<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_background_secondary"
    tools:context=".ui.ChatActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/lbWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbWelcome"
            android:textColor="@color/textColorWhite"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lbAppInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lbAppInformation"
            android:textColor="@color/textColorWhite" />

        <TextView
            android:id="@+id/lbEnterYourName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lbEnterYourName"
            android:textColor="@color/textColorWhite" />

        <EditText
            android:id="@+id/txUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txUsername"
            android:inputType="textPersonName"
            android:textColor="@color/textColorWhite"
            android:textColorHint="@color/grey300" />

        <Button
            android:id="@+id/btnSetIdentity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_selector"
            android:clickable="true"
            android:text="@string/btnSetIdentity"
            android:textColor="@color/textColorWhite" />

        <ProgressBar
            android:id="@+id/pbWaitKeys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:indeterminate="true"
            android:visibility="gone" />
    </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>