<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_background_secondary"
    tools:context=".ui.CreateContactActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivQrCode"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/big_logo" />

    <TextView
        android:id="@+id/lbYourFingerprint"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/lbYourFingerprint"
        android:textAlignment="center"
        android:textColor="@color/textColorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivQrCode" />

    <LinearLayout
        android:id="@+id/btShareContact"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:clickable="true"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbYourFingerprint">

        <ImageView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:clickable="false"
            android:src="@android:drawable/ic_menu_share" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:clickable="false"
            android:text="@string/btShareContact"
            android:textColor="@color/textColorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btScanContact"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btShareContact">

        <ImageView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:clickable="false"
            android:src="@android:drawable/ic_menu_camera" />

        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#0000"
            android:clickable="false"
            android:text="@string/btScanContact"
            android:textColor="@color/textColorWhite" />
    </LinearLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>